made some changes

--- a/listen.html
+++ b/listen.html
@@ -9,6 +9,7 @@
 
   <!-- Mobile viewport optimized -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
   <!-- Bootstrap CSS -->
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,19 +41,19 @@
      <div class="nav-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
        <li>
-        <a href="index.html">Home</a>
+        <a href="index.html">الرئيسية</a>
        </li>
        <li>
-        <a href="watch.html">watch</a>
+        <a href="watch.html">المشاهدة</a>
        </li>
        <li class="active">
-        <a href="listen.html">listen</a>
+        <a href="listen.html">الاستماع</a>
        </li>
        <li>
-        <a href="read.html">read</a>
+        <a href="read.html">القراءة</a>
        </li>
        <li>
-        <a href="grammers.html">grammers</a>
+        <a href="grammers.html">القواعد</a>
        </li>
       </ul>
 
@@ -60,6 +61,31 @@
 
     </div><!-- end container -->
    </div><!-- end navbar -->
+
+   <div class="row" id="bigCallout">
+     <div class="col-12">
+
+       <div class="alert alert-success alert-block fade in" id="successAlert">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+
+         <h4>تم التحميل بنجاح !</h4>
+         <p>لقد تم التحميل بنجاح ويمكنك الان استخدام الملفات الصوتية الموجدة داخ الملف المضغوط الذي قمت بتحميله</p>
+       </div><!-- end alert -->
+
+   <div class="well">
+     <div class="page-header">
+       <h1>استمع و تعلم <small>الاستماع من افضل الطرق لتعلم اي لغة</small></h1>
+     </div><!-- end page-header -->
+
+     <p class="lead">هنا يمكنك الاستماع لاكثر من تسعون مقطع صوتي يتكلمون في مختلف جوانب الحياة ويمكنك ايضل تحميلهم لتستمع اليهم من جوالك متى اردت و في راي هذه الطريقة مفيدة جدا وقد اسفدت منها شخصيا كثيرا</p>
+
+     <a href="audio/audioFiles.zip" class="btn btn-large btn-primary" id="alertMe">انقر هنا للتحميل</a>
+     <a target="_blank" href="https://www.mediafire.com/?tw97w0q1qd45vkx" class="btn btn-large btn-link">او من رابط اخر خارجي</a>
+   </div><!-- end well -->
+
+ </div><!-- end col-12 -->
+</div><!-- end bigCallout -->
+
    <ol class="bigOlNumbers" id="audioOrderList">
 
    </ol>
